--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- din-5008.css - Copyright (C) 2022 Hannes Diercks, Licensed under MIT https://github.com/Xiphe/din-5008-css -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
