--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Example Document in DIN 5008</title>
-    <link rel="stylesheet" href="din-5008.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
       @page {
         size: A4;
@@ -36,6 +36,7 @@
         <line x1="0" y1="0.1" x2="10" y2="0.1" stroke="rgba(0, 0, 0, 0.3)" stroke-width="0.2" />
         <line x1="0" y1="105.1" x2="10" y2="105.1" stroke="rgba(0, 0, 0, 0.3)" stroke-width="0.2" />
       </svg>
+
       <briefkopf></briefkopf>
       <rucksendeangabe>
         Mustermann GmbH | Beispiel-Straße 12 | 12345 Beispielhausen
@@ -47,7 +48,8 @@
         Straße und Hausnummer<br />
         Postleitzahl und Ort
       </anschriftzone>
-      <informationsblock> 32. Februar 2000 </informationsblock>
+      <informationsblock> Infoblock </informationsblock>
+      <datum> Datum </datum>
       <textfeld>
         <h2>Example Document using din-5008-css</h2>
         <ul>
