--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
   <body>
     <din-5008>
-      <!-- SVG-Falzmarken -->
+      <!-- SVG-Falzmarken 
       <svg class="fold-marks" width="10mm" height="105.2mm" viewBox="0 0 10 105.2">
         <line x1="0" y1="0.1" x2="10" y2="0.1" stroke="rgba(0, 0, 0, 0.3)" stroke-width="0.2" />
         <line x1="0" y1="105.1" x2="10" y2="105.1" stroke="rgba(0, 0, 0, 0.3)" stroke-width="0.2" />
-      </svg>
+      </svg>-->
 
       <briefkopf></briefkopf>
       <rucksendeangabe>
