--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ din-5008 {
 						<br/>
 						<b>Fett STRG+B </b>
 						<br/>
+<br/><a href="https://grapefruit89.github.io/din-5008-css-forked-for-later/">DIN 5008 Beispielseite</a>
 						<u>Unterstrichen STRG+U</u>
 					</textfeld>
 					<grussformel class="schriftfeld oneline" style="display:inline-block; margin-bottom: 3rem;">Mit freundlichen Grüßen</grussformel>
