--- a/index.html
+++ b/index.html
@@ -65,25 +65,6 @@ din-5008 {
   overflow: hidden; /* Schneidet überflüssigen Inhalt ab */
  }
 
-.autocomplete-items {
-    border: 1px solid #ddd;
-    border-top: none;
-    max-height: 200px;
-    overflow-y: auto;
-    background: #fff;
-    position: absolute;
-    z-index: 99;
-    width: 100%;
-}
-.autocomplete-items div {
-    padding: 10px;
-    cursor: pointer;
-}
-.autocomplete-items div:hover {
-    background-color: #e9e9e9;
-}
-
-
 
 
 
@@ -155,9 +136,7 @@ din-5008 {
 <!-- ABSENDER -->
 				<wrapper class="wrapper" style=" left: 140mm; right: 20mm; top: 27mm;  display: flex; flex-direction: column;">
 					<absender class="schriftfeld oneline" style="max-width: 50mm;">Moritz Baumeister</absender>
-				<div id="adresse-autocomplete" style="max-width: 400px; position: relative;"></div>
-				<adresse id="adresse" class="schriftfeld" contenteditable="true"></adresse>
-
+					<adresse class="schriftfeld"  style="height: fit-content; max-width: 50mm;  ">Kettelerstraße 2 <br>53844 Troisdorf</adresse>
 					<telefon class="schriftfeld oneline"  style="max-width: 50mm;" ">01601221445</telefon>
 				</wrapper>
 				
@@ -408,94 +387,6 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 
 </script>
-  
-  
-  
-  
-  <script>
- function addressAutocomplete(containerElement, callback) {
-    // Input-Feld erzeugen
-    const inputElement = document.createElement("input");
-    inputElement.type = "text";
-    inputElement.placeholder = "Adresse eingeben...";
-    inputElement.autocomplete = "off";
-    inputElement.style.width = "100%";
-    containerElement.appendChild(inputElement);
-
-    let currentTimeout;
-    let currentPromiseReject;
-    let currentItems;
-
-    const MIN_ADDRESS_LENGTH = 3;
-    const DEBOUNCE_DELAY = 300;
-    const apiKey = "76d0029534e44b51b8922907af2d20a9"; // <-- Hier deinen echten Key einsetzen!
-
-    inputElement.addEventListener("input", function() {
-        const currentValue = this.value;
-
-        if (currentTimeout) clearTimeout(currentTimeout);
-        if (currentPromiseReject) currentPromiseReject({ canceled: true });
-
-        if (!currentValue || currentValue.length < MIN_ADDRESS_LENGTH) return false;
-
-        currentTimeout = setTimeout(() => {
-            currentTimeout = null;
-            if (currentPromiseReject) currentPromiseReject({ canceled: true });
-
-            const url = `https://api.geoapify.com/v1/geocode/autocomplete?text=${encodeURIComponent(currentValue)}&format=json&lang=de&limit=5&apiKey=${apiKey}`;
-            let promise = new Promise((resolve, reject) => {
-                currentPromiseReject = reject;
-                fetch(url)
-                  .then(response => response.ok ? response.json().then(resolve) : response.json().then(reject));
-            });
-
-            promise.then((data) => {
-                currentItems = data.features;
-                closeDropDownList();
-                if (!currentItems || !currentItems.length) return false;
-
-                const autocompleteItemsElement = document.createElement("div");
-                autocompleteItemsElement.setAttribute("class", "autocomplete-items");
-                containerElement.appendChild(autocompleteItemsElement);
-
-                data.features.forEach((feature) => {
-                    const itemElement = document.createElement("DIV");
-                    itemElement.innerHTML = feature.properties.formatted;
-                    itemElement.addEventListener("click", function() {
-                        inputElement.value = feature.properties.formatted;
-                        closeDropDownList();
-                        if (callback) callback(feature);
-                    });
-                    autocompleteItemsElement.appendChild(itemElement);
-                });
-            }, (err) => {
-                if (!err.canceled) console.log(err);
-            });
-        }, DEBOUNCE_DELAY);
-    });
-
-    function closeDropDownList() {
-        const items = containerElement.querySelectorAll(".autocomplete-items");
-        items.forEach(item => containerElement.removeChild(item));
-    }
-
-    document.addEventListener("click", function(e) {
-        if (e.target !== inputElement) closeDropDownList();
-    });
-}
-
-// Initialisierung
-addressAutocomplete(
-    document.getElementById("adresse-autocomplete"),
-    function(selectedFeature) {
-        // Übertrage die ausgewählte Adresse ins contenteditable-Feld
-        document.getElementById('adresse').innerText = selectedFeature.properties.formatted;
-    }
-);
-
-  </script>
-  
-  
   
   
   
