--- a/index.html
+++ b/index.html
@@ -151,10 +151,9 @@ din-5008 {
 				<anrede class="schriftfeld oneline" style="margin-bottom: 1.5rem;">Sehr geehrte Damen und Herren,</anrede>
 					<textfeld class="schriftfeld"  style="width:100%; max-height: 150mm; height:auto;  margin-bottom: 1rem;">
 						<em>Kursiv STRG+I </em>
-						<br/>
-						<b>Fett STRG+B </b>
-						<br/>
-						<u>Unterstrichen STRG+U</u>
+						<br/><b>Fett STRG+B </b>
+						<br/><u>Unterstrichen STRG+U</u>
+						<br>https://grapefruit89.github.io/din-5008-css-forked-for-later/
 					</textfeld>
 					<grussformel class="schriftfeld oneline" style="display:inline-block; margin-bottom: 3rem;">Mit freundlichen Grüßen</grussformel>
 					
